# Metal_Demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: VertexData.h  main.h  mathUtilities.h  types.h
metal/: shader.metal  triangle.metal
src/: main.m  mathUtilities.c
